2004-01-10  Saito <saito2@digitalme.com>

	* timidity/timidity.c, timidity/playmidi.[ch]:
	  Support for Drumpart Effect Send Level.

2004-01-09  Saito <saito2@digitalme.com>

	* timidity/timidity.c, timidity/playmidi.c,
	  timidity/mix.c, timidity/instrum.[ch]:
	  Fix typo.
	  Fix modulation envelope.
	  Fix GS SysEx. Drum Instrument Play Note.
	  Fix modulation wheel.
	  Add #extension playnote.
	  Add some patch options.

2004-01-08  Saito <saito2@digitalme.com>

	* timidity/sndfont.c, timidity/playmidi.[ch],
	  timidity/mix.c, timidity/recache.c, timidity/resample.c:
	  Fix vintage bug of SoundFont.
	  Fix resampling with SF2 scale tuning.
	  Fix modulation envelope.
	  Fix GS SysEx. Drum Instrument Play Note.

2004-01-07  Saito <saito2@digitalme.com>

	* timidity/playmidi.c, timidity/instrum.[ch],
	  timidity/mod2midi.c, timidity/smplfile.c:
	  Fix around SoundFont.

2004-01-06  Saito <saito2@digitalme.com>

	* timidity/playmidi.c, timidity/sndfont.c,
	  timidity/instrum.h, timidity/mix.c:
	  Support for SoundFont's Sample Link.
	  FIx around modulation wheel.
	  Fix around MoogVCF.
	  Undo change of opt_drum_power.

2004-01-05  Saito <saito2@digitalme.com>

	* timidity/playmidi.[ch], timidity/sndfont.c,
	  timidity/mix.c, timidity/effect.c:
	  Fix around SoundFont.
	  Fix LPF resonance.
	  Add soft clipping function to noise-shaping on 16bit output.

2004-01-04  Saito <saito2@digitalme.com>

	* timidity/playmidi.[ch], timidity/mix.c, timidity/sndfont.c:
	  Fix resonance of MoogVCF.
	  Fix around LPF.
	  Fix around SoundFont.

2004-01-03  Saito <saito2@digitalme.com>

	* timidity/playmidi.c:
	  Fix NRPN Resonance and Harmonic Content.
	* timidity/tables.c:
	  Change modulation delay table of Chorus Effect.

2004-01-02  Saito <saito2@digitalme.com>

	* timidity/playmidi.c:
	  Fix around modulation wheel.
	* timidity/sndfont.c:
	  Fix around SoundFont.

2003-12-31  Saito <saito2@digitalme.com>

	* timidity/sndfont.c, timidity/reverb.c:
	  Fix delay modulation.