@@ -983,6 +983,7 @@ static void reinit_tone_bank_element(ToneBankElement *tone)
 	tone->strip_tail = -1;
     tone->amp = -1;
     tone->legato = tone->key_to_fc = tone->vel_to_fc = 0;
+	tone->reverb_send = tone->chorus_send = tone->delay_send = -1;
     tone->tva_level = -1;
 	tone->play_note = -1;
 }
@@ -1641,6 +1642,87 @@ MAIN_INTERFACE int read_config_file(char *name, int self)
 		continue;
 	    }
 		bank->tone[i].tva_level = atoi(w[2]);
+	}	/* #extension reverbsend */
+	else if(strcmp(w[0], "reverbsend") == 0)
+	{
+	    if(words != 3)
+	    {
+		ctl->cmsg(CMSG_ERROR, VERB_NORMAL, "%s: line %d: syntax error", name, line);
+		CHECKERRLIMIT;
+		continue;
+	    }
+	    if(!bank)
+	    {
+		ctl->cmsg(CMSG_ERROR, VERB_NORMAL,
+			  "%s: line %d: Must specify tone bank or drum set "
+			  "before assignment", name, line);
+		CHECKERRLIMIT;
+		continue;
+	    }
+	    i = atoi(w[1]);
+	    if(i < 0 || i > 127)
+	    {
+		ctl->cmsg(CMSG_ERROR, VERB_NORMAL,
+			  "%s: line %d: extension reverbsend "
+			  "must be between 0 and 127", name, line);
+		CHECKERRLIMIT;
+		continue;
+	    }
+		bank->tone[i].reverb_send = atoi(w[2]);
+	}	/* #extension chorussend */
+	else if(strcmp(w[0], "chorussend") == 0)
+	{
+	    if(words != 3)
+	    {
+		ctl->cmsg(CMSG_ERROR, VERB_NORMAL, "%s: line %d: syntax error", name, line);
+		CHECKERRLIMIT;
+		continue;
+	    }
+	    if(!bank)
+	    {
+		ctl->cmsg(CMSG_ERROR, VERB_NORMAL,
+			  "%s: line %d: Must specify tone bank or drum set "
+			  "before assignment", name, line);
+		CHECKERRLIMIT;
+		continue;
+	    }
+	    i = atoi(w[1]);
+	    if(i < 0 || i > 127)
+	    {
+		ctl->cmsg(CMSG_ERROR, VERB_NORMAL,
+			  "%s: line %d: extension chorussend "
+			  "must be between 0 and 127", name, line);
+		CHECKERRLIMIT;
+		continue;
+	    }
+		bank->tone[i].chorus_send = atoi(w[2]);
+	}	/* #extension delaysend */
+	else if(strcmp(w[0], "delaysend") == 0)
+	{
+	    if(words != 3)
+	    {
+		ctl->cmsg(CMSG_ERROR, VERB_NORMAL, "%s: line %d: syntax error", name, line);
+		CHECKERRLIMIT;
+		continue;
+	    }
+	    if(!bank)
+	    {
+		ctl->cmsg(CMSG_ERROR, VERB_NORMAL,
+			  "%s: line %d: Must specify tone bank or drum set "
+			  "before assignment", name, line);
+		CHECKERRLIMIT;
+		continue;
+	    }
+	    i = atoi(w[1]);
+	    if(i < 0 || i > 127)
+	    {
+		ctl->cmsg(CMSG_ERROR, VERB_NORMAL,
+			  "%s: line %d: extension delaysend "
+			  "must be between 0 and 127", name, line);
+		CHECKERRLIMIT;
+		continue;
+	    }
+		bank->tone[i].delay_send = atoi(w[2]);
 	}	/* #extension playnote */
 	else if(strcmp(w[0], "playnote") == 0)
 	{
